<resources>
    <string name="app_name">PjatkPAMO</string>
    <string name="bmi">BMI</string>
    <string name="heigth_in_cm">Height (in cm)</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="calculate">Calculate</string>
    <string name="Underweight">Underweight</string>
    <string name="Optimum">Optimum</string>
    <string name="Overweight">Overweight</string>
    <string name="Obesity">Obesity</string>
    <string name="Start">Start</string>
    <string name="Man">Man</string>
    <string name="Woman">Woman</string>
    <string name="Age">Age</string>
    <string name="Recipe">Recipe</string>
    <string name="recipe_high_calories">
        <b><big>Vegan Cobb Salad Recipe</big></b>
        \n<b>1003 Calories</b>
        \n<b>Ingredients</b>
            \n<li>2 heads of romaine lettuce</li>
            \n<li>2 avocados</li>
            \n<li>2 medium sized carrots</li>
            \n<li>1 cup of cherry tomatoes</li>
            \n<li>1/2 cup of sweetcorn</li>
            \n<li>2 spring onions</li>
            \n<li>1/3 cup of grated red cabbage</li>
        \n<b>Roasted Chickpeas</b>
            \n<li>1 can of chickpeas</li>
            \n<li>1/3 cup of tomato puree</li>
            \n<li>1 tbsp of vegan Worcester sauce</li>
            \n<li>1 tsp of onion powder</li>
            \n<li>1 tsp of maple syrup</li>
            \n<li>1 tsp of liquid smoke</li>
            \n<li>1 tsp of olive oil</li>
        \n<b>Grilled vegan seitan chicken</b>
            \n<li>2 cups of vital wheat gluten</li>
            \n<li>1 tsp of onion powder</li>
            \n<li>1 tsp of garlic powder</li>
            \n<li>1 no chicken bouillon cube</li>
            \n<li>1 tbsp of vegan Worcester sauce</li>
            \n<li>1 cup of silken tofu</li>
            \n<li>1 tbsp of vegan chicken seasoning</li>
        \n<b>Vegan ranch dressing</b>
            \n<li>1/2 cup of vegan mayo</li>
            \n<li>1 tsp of dried dill</li>
            \n<li>1 tbsp of chopped fresh chives</li>
            \n<li>2 tbsp of apple cider vinegar</li>
            \n<li>1/3 cup of oat or soya milk" </li>
    </string>
    <string name="recipe_low_calories">
        <b><big>Easy chicken mole</big></b>
        \n<b>243 Calories</b>
        \n<b>Ingredients</b>
            \n<li>red onion 2, 1 chopped, 1 sliced into rings</li>
            \n<li>garlic 2 cloves, crushed</li>
            \n<li>olive oil</li>
            \n<li>chicken thighs 6 skinless, cut into strips</li>
            \n<li>chopped tomatoes 400 tin</li>
            \n<li>chicken stock 500ml</li>
            \n<li>Willies Mexican mole cacao 1/4 block</li>
            \n<li>chilli powder a pinch</li>
            \n<li>coriander a small bunch, leaves picked</li>
            \n<li>cooked rice to serve</li>
            \n<li>lime wedges to serve</li>
    </string>
    <string name="covid_graph">COVID Graph</string>
    <string name="covid_quiz">COVID Quiz</string>
    <string name="hello_blank_fragment">Hello graph fragment</string>
    <string name="hello_blank_fragment2">Hello quiz fragment</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
</resources>