<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Calculator_BMI_button"
            android:layout_width="188dp"
            android:layout_height="62dp"
            android:layout_marginBottom="30dp"
            android:text="@string/bmi" />

        <Button
            android:id="@+id/Covid_Quiz_button"
            android:layout_width="188dp"
            android:layout_height="62dp"
            android:layout_marginBottom="30dp"
            android:text="@string/covid_quiz" />

        <Button
            android:id="@+id/Covid_Graph_button"
            android:layout_width="188dp"
            android:layout_height="62dp"
            android:text="@string/covid_graph" />
    </LinearLayout>

</FrameLayout>