<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="331dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/bmi"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heigth_in_cm"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextHeigth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight_in_kg"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/calculate"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewCalculate"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text=""
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCalculatedOpinion"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text=""
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>